Apply global border-box to fix layout overflow and simplify sizing

--- a/css/global-search.scss
+++ b/css/global-search.scss
@@ -4,7 +4,6 @@ form[name=global-search] {
 	padding: .8em 1em;
 
 	input {
-		box-sizing: border-box;
 		margin: auto;
 		width: 100%;
 	}
