--- a/css/global.scss
+++ b/css/global.scss
@@ -1,4 +1,8 @@
 
+*, *:before, *:after {
+	box-sizing: border-box;
+}
+
 a {
 	color: inherit;
 	text-decoration: inherit;
